--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   },
   "dependencies": {
     "body-parser": "^1.12.4",
+    "browser-sync": "^2.18.2",
     "cookie-parser": "^1.3.5",
     "express": "^4.12.4",
     "express-handlebars": "^3.0.0",
     "fs": "0.0.1-security",
+    "gulp": "^3.9.1",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-sass": "^2.3.2",
     "handlebars": "^4.0.5",
     "lokijs": "^1.3.19",
     "node-sass": "^3.13.0"
