--- a/package.json
+++ b/package.json
@@ -6,16 +6,27 @@
   },
   "dependencies": {
     "body-parser": "^1.12.4",
-    "browser-sync": "^2.18.2",
     "cookie-parser": "^1.3.5",
     "express": "^4.12.4",
     "express-handlebars": "^3.0.0",
     "fs": "0.0.1-security",
-    "gulp": "^3.9.1",
-    "gulp-nodemon": "^2.2.1",
-    "gulp-sass": "^2.3.2",
     "handlebars": "^4.0.5",
     "lokijs": "^1.3.19",
-    "node-sass": "^3.13.0"
+    "vue": "^2.1.10",
+    "vue-router": "^2.2.0"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "browser-sync": "^2.18.2",
+    "gulp": "^3.9.1",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-sass": "^3.1.0",
+    "babel-preset-es2015": "^6.18.0",
+    "browserify": "^14.0.0",
+    "vueify": "^9.4.0",
+    "node-sass": "^4.5.0"
+  },
+  "browser": {
+    "vue": "vue/dist/vue.common"
   }
 }
