--- a/package.json
+++ b/package.json
@@ -5,15 +5,24 @@
     "start": "nodemon --harmony ./server.js"
   },
   "dependencies": {
+    "axios": "^0.15.3",
+    "babelify": "^7.3.0",
     "body-parser": "^1.12.4",
+    "bootstrap": "^4.0.0-alpha.6",
     "cookie-parser": "^1.3.5",
     "express": "^4.12.4",
     "express-handlebars": "^3.0.0",
     "fs": "0.0.1-security",
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^2.4.1",
     "handlebars": "^4.0.5",
-    "lokijs": "^1.3.19",
-    "vue": "^2.1.10",
-    "vue-router": "^2.2.0"
+    "lokijs": "^1.4.3",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "vue": "^2.2.4",
+    "vue-router": "^2.3.0",
+    "vuex": "^2.2.1",
+    "watchify": "^3.9.0"
   },
   "devDependencies": {
     "babel-plugin-transform-runtime": "^6.15.0",
