--- a/package.json
+++ b/package.json
@@ -26,14 +26,15 @@
   },
   "devDependencies": {
     "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-2": "^6.22.0",
     "browser-sync": "^2.18.2",
+    "browserify": "^14.0.0",
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1",
     "gulp-sass": "^3.1.0",
-    "babel-preset-es2015": "^6.18.0",
-    "browserify": "^14.0.0",
-    "vueify": "^9.4.0",
-    "node-sass": "^4.5.0"
+    "node-sass": "^4.5.0",
+    "vueify": "^9.4.0"
   },
   "browser": {
     "vue": "vue/dist/vue.common"
