--- a/package.json
+++ b/package.json
@@ -2,8 +2,16 @@
   "name": "LEAN",
   "version": "1.0.0",
   "scripts": {
-    "start": "nodemon --harmony ./server.js"
+    "start": "node ./server.js"
   },
+  "engines": {
+    "node": "6.10.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/disjfa/lean-bootstrap"
+  },
+  "main": "server.js",
   "dependencies": {
     "axios": "^0.15.3",
     "babelify": "^7.3.0",
