--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cookie-parser": "^1.3.5",
     "express": "^4.12.4",
     "express-handlebars": "^3.0.0",
+    "font-awesome": "^4.7.0",
     "fs": "0.0.1-security",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.4.1",
@@ -41,6 +42,7 @@
     "browser-sync": "^2.18.2",
     "browserify": "^14.0.0",
     "gulp": "^3.9.1",
+    "gulp-copy": "^1.0.0",
     "gulp-nodemon": "^2.2.1",
     "gulp-sass": "^3.1.0",
     "vueify": "^9.4.0"
