--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "LEAN",
   "version": "1.0.0",
   "scripts": {
+    "dev": "HOST=0.0.0.0 nodemon ./server.js -- --host=0.0.0.0",
     "start": "node ./server.js"
   },
   "engines": {
