--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "dev": "HOST=0.0.0.0 NODE_ENV=development gulp",
     "build": "HOST=0.0.0.0 NODE_ENV=production gulp build",
-    "start": "NODE_ENV=production node ./server.js"
+    "start": "NODE_ENV=production node ./server.js",
+    "all-contributors-add": "all-contributors add",
+    "all-contributors-generate": "all-contributors generate"
   },
   "engines": {
     "node": "6.10.2"
@@ -14,6 +16,8 @@
     "url": "https://github.com/disjfa/lean-bootstrap"
   },
   "main": "server.js",
+  "author": "Disjfa",
+  "license": "MIT",
   "dependencies": {
     "axios": "^0.15.3",
     "babelify": "^7.3.0",
@@ -38,6 +42,7 @@
     "watchify": "^3.9.0"
   },
   "devDependencies": {
+    "all-contributors-cli": "^4.3.0",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-2": "^6.22.0",
