--- a/package.json
+++ b/package.json
@@ -26,17 +26,22 @@
     "cookie-parser": "^1.3.5",
     "express": "^4.12.4",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.2",
     "font-awesome": "^4.7.0",
     "fs": "0.0.1-security",
+    "gulp-favicons": "^2.2.7",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.4.1",
     "handlebars": "^4.0.5",
     "lokijs": "^1.4.3",
     "node-sass": "^4.5.2",
+    "passport": "^0.3.2",
+    "passport-github2": "^0.1.10",
     "uuid": "^3.0.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "vue": "^2.2.4",
+    "vue-highlightjs": "^1.3.1",
     "vue-router": "^2.3.0",
     "vuex": "^2.2.1",
     "watchify": "^3.9.0"
