--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.4.1",
     "handlebars": "^4.0.5",
+    "jquery": "^3.2.1",
     "lokijs": "^1.4.3",
     "node-sass": "^4.5.2",
     "passport": "^0.3.2",
     "passport-github2": "^0.1.10",
+    "tether": "^1.4.0",
     "uuid": "^3.0.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
@@ -48,11 +50,16 @@
   },
   "devDependencies": {
     "all-contributors-cli": "^4.3.0",
+    "babel-eslint": "^7.2.3",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-2": "^6.22.0",
     "browser-sync": "^2.18.2",
     "browserify": "^14.0.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb-base": "^11.2.0",
+    "eslint-plugin-html": "^2.0.3",
+    "eslint-plugin-import": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-copy": "^1.0.0",
     "gulp-nodemon": "^2.2.1",
