--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "vue": "^2.2.4",
+    "vue-analytics": "^4.2.1",
     "vue-highlightjs": "^1.3.1",
     "vue-router": "^2.3.0",
     "vuex": "^2.2.1",
