--- a/package.json
+++ b/package.json
@@ -23,52 +23,53 @@
     "babel-plugin-transform-es2015-literals": "^6.22.0",
     "babel-plugin-transform-es2015-template-literals": "^6.22.0",
     "babelify": "^7.3.0",
-    "body-parser": "^1.17.2",
-    "bootstrap": "^4.0.0-beta",
+    "body-parser": "^1.18.2",
+    "bootstrap": "^4.0.0",
     "cookie-parser": "^1.3.5",
-    "express": "^4.15.4",
+    "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
-    "express-session": "^1.15.5",
+    "express-session": "^1.15.6",
     "font-awesome": "^4.7.0",
     "fs": "0.0.1-security",
     "gulp-favicons": "^2.2.7",
     "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": "^2.4.1",
-    "handlebars": "^4.0.10",
-    "jquery": "^3.2.1",
-    "lokijs": "^1.5.0",
-    "node-sass": "^4.5.2",
-    "passport": "^0.3.2",
-    "passport-github2": "^0.1.10",
-    "popper.js": "^1.12.1",
-    "tether": "^1.4.0",
-    "toastr": "^2.1.2",
-    "uuid": "^3.1.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "vue": "^2.4.2",
-    "vue-analytics": "^4.2.2",
+    "gulp-sourcemaps": "^2.6.4",
+    "handlebars": "^4.0.11",
+    "jquery": "^3.3.1",
+    "lokijs": "^1.5.2",
+    "node-sass": "^4.7.2",
+    "passport": "^0.4.0",
+    "passport-github": "^1.1.0",
+    "popper.js": "^1.13.0",
+    "tether": "^1.4.3",
+    "toastr": "^2.1.4",
+    "uuid": "^3.2.1",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^1.1.2",
+    "vue": "^2.5.13",
+    "vue-analytics": "^4.4.0",
     "vue-highlightjs": "^1.3.3",
-    "vue-router": "^2.7.0",
-    "vuex": "^2.2.1",
-    "watchify": "^3.9.0"
+    "vue-router": "^2.8.1",
+    "vue-template-compiler": "^2.5.13",
+    "vuex": "^2.5.0",
+    "watchify": "^3.10.0"
   },
   "devDependencies": {
-    "all-contributors-cli": "^4.4.0",
-    "babel-core": "^6.25.0",
+    "all-contributors-cli": "^4.10.1",
+    "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.3",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.22.0",
-    "babel-runtime": "^6.25.0",
-    "browser-sync": "^2.18.13",
-    "browserify": "^14.4.0",
+    "babel-runtime": "^6.26.0",
+    "browser-sync": "^2.23.6",
+    "browserify": "^14.5.0",
     "eslint": "^3.19.0",
-    "eslint-config-airbnb-base": "^11.3.1",
+    "eslint-config-airbnb-base": "^11.3.2",
     "eslint-plugin-html": "^2.0.3",
-    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-import": "^2.8.0",
     "gulp": "^3.9.1",
-    "gulp-copy": "^1.0.1",
+    "gulp-copy": "^1.1.0",
     "gulp-nodemon": "^2.2.1",
     "gulp-sass": "^3.1.0",
     "vueify": "^9.4.0"
